# montecassino

./: README.md  main.py  pyproject.toml
src/armarius/: __init__.py  pyproject.toml
src/research-assistant/: main.py  pyproject.toml
