[project]
name = "armarius"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Payne McDowell", email = "payne@wheelbarrowdigital.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
armarius = "armarius:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
